# platinum-parsing

./: .gitignore  CNAME  README.md  TODO.md  index.html  platinum-parsing.cabal
app/: Main.hs
cli/: Args.hs  Log.hs  Main.hs  Project.hs  Work.hs
cli/Cmd/: Build.hs  Ebnf.hs  Lalr.hs  New.hs
doc/: README.md  ebnf-of-ebnf.ebnf
doc/diagrams/misc/: complete.plantuml  parser-lr.plantuml
doc/diagrams/pipeline/: pipeline.odg
doc/diagrams/use-case/: plantuml_export.txt  use-case.plantuml
doc/examples/: cli-new-project.md  cli-simple-expression.md  cli-simple-template.md  framework-simple-expression.md
doc/examples/simple-expression/: README.md  expr.txt  grammar.ebnf
doc/grammars/: RTDynamicC.ebnf  ebnf.ebnf  ebnf.min.ebnf  lisp.ebnf  numbers-expr-with-token.ebnf  numbers-expr.ebnf  simple.ebnf  test.ebnf
doc/grammars/wrong/: 02-many-start-rules.ebnf  04-missing-non-term.ebnf
doc/landing-page/assets/css/: main.css
doc/maintenance/: project-file.md  repository-folders.md  upload-to-hackage.md  work-file.md
doc/planning/: planning.xls
doc/rapport/: rapport.tex
doc/references/: ebnf-cheatsheet.md  project-file.md  template-processor.md
doc/templates/: csharp-table.cs  lr-table  lr-table.expected
extra-doc/affiche/: Model_patrick.champion.doc
extra-doc/diagrams/misc/: dfa-exemple.plantuml  lexer-dfa.plantuml
extra-doc/diagrams/pipeline/: pipeline.odg
extra-doc/diagrams/presentation/: architecture-pp.plantuml  compiler-units.plantuml  generation-process.plantuml  grammar-ast.plantuml  template.plantuml
extra-doc/diagrams/technologies/: model.odg
extra-doc/logo/: logo.txt
extra-doc/planning/: planning.xls
extra-doc/presentations/: finale.html  intermediaire.html
extra-doc/rapport/: rapport.tex
res/diagrams/misc/: architecture-pp.plantuml  compiler-basic.plantuml  compiler-parser-en.plantuml  compiler-parser.plantuml  compiler-units.plantuml  exemple-pipeline.plantuml  generation-process.plantuml  grammar-ast.plantuml  parser-lexer.plantuml  parser-lr-steps.plantuml  parser-lr.plantuml  pp-objective.plantuml  template-banner.plantuml  template.plantuml
res/diagrams/pipeline/: pipeline-framework-gold.plantuml  pipeline-framework.plantuml  pipeline-full.plantuml  pipeline-gold-parser.plantuml  pipeline-output.plantuml  pipeline.plantuml
res/grammars/: iso-cnc.ebnf  simple2.ebnf
res/grammars/tokens/: test.ebnf
res/grammars/wrong/: 01-no-start-rule.ebnf  03-direct-left-recursion.ebnf  05-not-lalr.ebnf
src/: PP.hs
src/PP/: Builder.hs  Grammar.hs  Grammars.hs  Lexer.hs  Parser.hs  Rule.hs  Template.hs
src/PP/Builders/: Dfa.hs  Lalr.hs  Lr1.hs  Nfa.hs
src/PP/Grammars/: EBNF.hs  Ebnf.hs  Lexical.hs  LexicalHelper.hs
src/PP/Lexers/: Dfa.hs
src/PP/Parsers/: Lr.hs
src/PP/Templates/: Dfa.hs  Lr.hs
test/: Main.hs  Spec.hs
test/PPTest/: Rule.hs  Template.hs
test/PPTest/Builders/: Dfa.hs  Lalr.hs  Lr1.hs  Nfa.hs
test/PPTest/Grammars/: EBNF.hs  Ebnf.hs  Lexical.hs  LexicalHelper.hs
test/PPTest/Lexers/: Dfa.hs
test/PPTest/Other/: LexerDfaParserLr.hs
test/PPTest/Parsers/: Lr.hs
test/PPTest/Templates/: Dfa.hs  Lr.hs
trials/: grammar.ebnf
trials/csharp-engine/: csharp-engine.sln
trials/csharp-engine/csharp-engine/: LrTableImpl.cs  Program.cs  csharp-engine.csproj
trials/csharp-engine/csharp-engine/Properties/: AssemblyInfo.cs
trials/csharp-engine/csharp-engine/lr-engine/: LrAction.cs  LrAst.cs  LrConfig.cs  LrEvaluate.cs  LrParser.cs  LrTable.cs
trials/csharp-engine/csharp-engine/lr_engine/: LrAction.cs  LrAst.cs  LrConfig.cs  LrParser.cs  LrTable.cs  LrTableImpl.cs
trials/csharp-lexer-analysis/: csharp-lexer-analysis.sln  output-with-eval.txt  output-without-eval.txt
trials/csharp-lexer-analysis/csharp-lexer-analysis/: Program.cs  TableWith.cs  TableWithout.cs  csharp-lexer-analysis.csproj
trials/csharp-lexer-analysis/csharp-lexer-analysis/engine-with/: LrAst.cs  (+7 more)
trials/csharp-simple-ebnf/: csharp-simple-ebnf.sln
trials/csharp-simple-ebnf/csharp-simple-ebnf/: EBNF.cs  Program.cs  csharp-simple-ebnf.csproj
trials/fsharp-simple-ebnf/: fsharp-simple-ebnf.sln
trials/fsharp-simple-ebnf/fsharp-simple-ebnf/: AssemblyInfo.fs  EBNF.fs  Program.fs  fsharp-simple-ebnf.fsproj  packages.config
trials/haskell-simple-ebnf/: LICENSE  haskell-simple-ebnf.cabal
trials/haskell-simple-ebnf/app/: Main.hs
trials/haskell-simple-ebnf/src/: EBNF.hs
trials/iso-cnc-prog/Programme principal/: Programme principal ebauche.nc
trials/iso-cnc-prog/Sous-programmes/: Piece Test Micromac_modif_V2_Ebauche_1.nc  Piece Test Micromac_modif_V2_Ebauche_10.nc  Piece Test Micromac_modif_V2_Ebauche_11.nc  Piece Test Micromac_modif_V2_Ebauche_12.nc  Piece Test Micromac_modif_V2_Ebauche_13.nc  Piece Test Micromac_modif_V2_Ebauche_14.nc  Piece Test Micromac_modif_V2_Ebauche_15.nc  Piece Test Micromac_modif_V2_Ebauche_16.nc  Piece Test Micromac_modif_V2_Ebauche_2.nc  Piece Test Micromac_modif_V2_Ebauche_3.nc  Piece Test Micromac_modif_V2_Ebauche_4.nc  Piece Test Micromac_modif_V2_Ebauche_5.nc  Piece Test Micromac_modif_V2_Ebauche_6.nc  Piece Test Micromac_modif_V2_Ebauche_7.nc  Piece Test Micromac_modif_V2_Ebauche_8.nc  Piece Test Micromac_modif_V2_Ebauche_9.nc
(+8 files in other folders)
