name:                platinum-parsing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chlablak/platinum-parsing
license:             BSD3
license-file:        LICENSE
author:              chlablak
maintainer:          chlablak@gmail.com
copyright:           2017 Patrick Champion
category:            Parsing, Compilation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PP
                     , PP.Grammar
                     , PP.Grammars.Ebnf
                     , PP.Rule
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , containers
  default-language:    Haskell2010

executable pp
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Args
                     , Cmd.Ebnf
  build-depends:       base
                     , platinum-parsing
                     , optparse-applicative
  default-language:    Haskell2010

test-suite pp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PPTest.Grammars.Ebnf
                     , PPTest.Rule
  build-depends:       base
                     , platinum-parsing
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chlablak/platinum-parsing
