name:                platinum-parsing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chlablak/platinum-parsing
license:             BSD3
license-file:        LICENSE
author:              chlablak
maintainer:          chlablak@gmail.com
copyright:           2017 Patrick Champion
category:            Parsing, Compilation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PP
                     , PP.Builder
                     , PP.Builders.Lalr
                     , PP.Builders.Lr1
                     , PP.Builders.Dfa
                     , PP.Builders.Nfa
                     , PP.Grammar
                     , PP.Grammars.Ebnf
                     , PP.Grammars.Lexical
                     , PP.Grammars.LexicalHelper
                     , PP.Lexer
                     , PP.Lexers.Dfa
                     , PP.Parser
                     , PP.Parsers.Lr
                     , PP.Rule
                     , PP.Template
                     , PP.Templates.Dfa
                     , PP.Templates.Lr
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , containers
                     , vector
                     , HStringTemplate
                     , fgl
                     , mtl
                     , binary
  default-language:    Haskell2010

executable pp
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Args
                     , Cmd.Ebnf
                     , Cmd.Lalr
                     , Cmd.New
                     , Log
                     , Work
                     , Project
  build-depends:       base
                     , platinum-parsing
                     , optparse-applicative
                     , vector
                     , containers
                     , mtl
                     , clock
                     , fgl
                     , directory
                     , binary
                     , data-hash
                     , yaml
                     , text
  default-language:    Haskell2010

test-suite pp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PPTest.Builders.Lalr
                     , PPTest.Builders.Lr1
                     , PPTest.Builders.Dfa
                     , PPTest.Builders.Nfa
                     , PPTest.Grammars.Ebnf
                     , PPTest.Grammars.Lexical
                     , PPTest.Grammars.LexicalHelper
                     , PPTest.Lexers.Dfa
                     , PPTest.Other.LexerDfaParserLr
                     , PPTest.Rule
                     , PPTest.Parsers.Lr
                     , PPTest.Templates.Lr
                     , PPTest.Templates.Dfa
                     , PPTest.Template
  build-depends:       base
                     , platinum-parsing
                     , hspec
                     , containers
                     , vector
                     , fgl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chlablak/platinum-parsing
